2011-05-27  Nick Clifton  <nickc@redhat.com>

	* libc/sys/sysnecv850/sbrk.c (_sbrk): Tidy code.
	Base start of heap on the "heap_start" symbol.

2011-05-25  Eric Blake  <eblake@redhat.com>

	* libc/string/strerror.c (_strerror_r): Report "Success" for 0.

2011-05-25  Eric Blake  <eblake@redhat.com>

	* libc/string/strerror.c (strerror): Split body into...
	(_strerror_r): ...new reentrant function.
	* libc/string/u_strerr.c (_user_strerror): Update signature.
	* libc/include/string.h (_strerror_r): New prototype.
	* libc/posix/collate.c (__collate_err): Adjust callers.
	* libc/stdio/perror.c (_perror_r): Likewise.
	* libc/string/strerror_r.c (strerror_r): Likewise.
	* libc/string/xpg_strerror_r.c (__xpg_strerror_r): Likewise.

2011-05-19  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/stdio_ext.h: New header.
	* libc/stdio/fpurge.c [!__rtems__] (__fpurge): New function.

2011-05-19  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* Makefile.am (install-data-local): Fix condition and rm call.
	* Makefile.in: Regenerate.

2011-05-16  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* libc/include/time.h (CLOCK_PROCESS_CPUTIME_ID): Rename from
	CLOCK_PROCESS_CPUTIME.
	(CLOCK_THREAD_CPUTIME_ID): Rename from CLOCK_THREAD_CPUTIME.
	* libc/include/sys/features.h [__CYGWIN__] (_POSIX_CPUTIME): Define.
	(_POSIX_THREAD_CPUTIME): Define.

2011-05-16  Christian Bruel  <christian.bruel@st.com>

	* libc/stdlib/strtod.c (_strtod_r): Fix nf/nd counts to not exceed
	DBL_DIG.

2011-05-15  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/features.h (_POSIX_THREAD_ATTR_STACKADDR): Define
	to 200112L for Cygwin.

2011-05-12  Peter Rosin  <peda@lysator.liu.se>

	* libc/time/strptime.c (strptime): Fill in tm_yday when all of tm_year,
	tm_mon and tm_mday are updated. Fill in tm_mon, tm_mday and tm_wday
	when both of tm_year and tm_yday are updated.

2011-05-12  Peter Rosin  <peda@lysator.liu.se>
